--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* BASLÄGE (Desktop) */
+/* BASLÄGE (Desktop >1025px) */
 /*Hur jag vill att intro tiles och sidebar ska ligga, mer utrymme för intro och tiles än sidebar*/
 .layout {
   display: grid;
@@ -217,9 +217,9 @@ h2 {
 
 
 
-/* ===========================
+/* 
    TABLET (768px–1199px)
-   =========================== */
+  */
 
    @media (min-width: 768px) and (max-width: 1199px) {
 
@@ -244,9 +244,9 @@ h2 {
     }
   
     .intro img {
-      width: 105%;
-      height: 70%;
-      min-height: 400px;        
+      width: 100%;
+      height: 100%;
+            
       object-fit: cover;
       object-position: center 20%;
       border-radius: 10px;
@@ -307,9 +307,9 @@ h2 {
   }
   
 
-/* ===========================
+/* 
    MOBIL (<768px)
-   =========================== */
+    */
 @media (max-width: 767px) {
   .layout {
     display: flex;
@@ -344,9 +344,9 @@ h2 {
   .tiles img { border-radius: 20%; }
 }
 
-/* ===========================
+/*
    OM OSS
-   =========================== */
+   */
 .om .layout {
   display: flex;
 }
@@ -372,17 +372,17 @@ h2 {
   margin-bottom: 20px; /* lite luft under bilden */
 }
 
-/* ===========================
+/* 
    Vi som kämpar
-   =========================== */
+    */
 .page-undersida .layout {
   display: block;
   gap:0;
 }
 
-   /* ===========================
+   /* 
   Lyckliga historier
-   =========================== */
+   */
 
 
 .sidebar-item figcaption {
